scs-trade-pro-main

--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -10,3 +10,9 @@
 .v__expand_cell .ant-table-row-expand-icon-cell {
   width: auto !important;
 }
+.v__expand_cell .ant-table-row-expand-icon-cell {
+  width: auto !important;
+}
+.v__expand_cell .ant-table-row-expand-icon-cell {
+  width: auto !important;
+}
